# Network-Security-System

./: .gitignore  Dockerfile  README.md  app.py  fast.py  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  t.cpp  template.py  test_mongodb.py
.cph/: .t.cpp_5226e3600147e1f9c0d88c9af80d16ac.prob
.github/workflows/: main.yaml
Artifacts/08_27_2025_01_54_30/Network_Data/ingested/: test.csv  train.csv
Artifacts/08_27_2025_03_18_22/Network_Data/ingested/: test.csv  train.csv
Artifacts/08_27_2025_03_19_22/Network_Data/ingested/: test.csv  train.csv
Artifacts/08_27_2025_03_20_24/Network_Data/ingested/: test.csv  train.csv
Artifacts/08_27_2025_03_23_03/Network_Data/ingested/: test.csv  train.csv
Artifacts/08_27_2025_03_23_36/Network_Data/ingested/: test.csv  train.csv
data_schema/: schema.yaml
final_model/: preprocessing.pkl
network_security/cloud/: s3_syncer.py
network_security/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
network_security/constants/: data_ingestion.py
network_security/constants/training_pipeline/: __init__.py
network_security/entity/: artifact_entity.py  config_entity.py
network_security/exception/: exception.py  logger.py
network_security/pipeline/: batch_prediction.py  training_pipeline.py
network_security/utils/main_utils/: utils.py
network_security_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py
src/network_security/exception/: exception.py  logger.py
templates/: base.html  table.html
(+14 files in other folders)
